0808 무한로딩은 해결했는데 나머지 기능은 아직 확인 안함.